--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Use AWS to query Hamlin's air monitors and send a notification if they report above a threshold.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "claudia update"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,12 @@
   "bugs": {
     "url": "https://github.com/HamlinSchool/canary/issues"
   },
-  "homepage": "https://github.com/HamlinSchool/canary#readme"
+  "homepage": "https://github.com/HamlinSchool/canary#readme",
+  "dependencies": {
+    "aws-sdk": "^2.580.0",
+    "date-fns": "^2.8.1"
+  },
+  "devDependencies": {
+    "claudia": "^5.11.0"
+  }
 }
