--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "claudia update"
+    "deploy": "claudia update",
+    "start": "TEST=1 node ./test.js"
   },
   "repository": {
     "type": "git",
